samples/_failures_safe/1761491597_f433da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9804ee8d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_9804ee8d.c:185:13: error: expected expression at end of input
  185 |             printf("Vertex %d: %d\n", i,
      |             ^~~~~~
./samples/SAFE/__tmp_9804ee8d.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9804ee8d.c:185:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9804ee8d.c:185:13: error: expected declaration or statement at end of input
